CON-2280: comments - fix spacing around avatar and user name

--- a/extensions/wikia/Venus/styles/article/comments.scss
+++ b/extensions/wikia/Venus/styles/article/comments.scss
@@ -225,7 +225,7 @@
 
 	/* avatars */
 	.speech-bubble-avatar {
-		margin-left: -70px;
+		margin: -10px 0 -25px -70px;
 
 		a {
 			display: inline-block;
